--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           dotnet build -c Release Source/YoloSharp/YoloSharp.csproj -p:Version=${{ env.VERSION }}
           dotnet build -c GpuRelease Source/YoloSharp/YoloSharp.csproj -p:Version=${{ env.VERSION }}
+          dotnet build -c GpuLinuxRelease Source/YoloSharp/YoloSharp.csproj -p:Version=${{ env.VERSION }}
+          dotnet build -c GpuWindowsRelease Source/YoloSharp/YoloSharp.csproj -p:Version=${{ env.VERSION }}
 
       - name: Test
         run: dotnet test Source/YoloSharp.Tests/YoloSharp.Tests.csproj
@@ -36,6 +38,8 @@ jobs:
         run: |
           dotnet pack -c Release -o . Source/YoloSharp/YoloSharp.csproj -p:Version=${{ env.VERSION }}
           dotnet pack -c GpuRelease -o . Source/YoloSharp/YoloSharp.csproj -p:Version=${{ env.VERSION }}
+          dotnet pack -c GpuLinuxRelease -o . Source/YoloSharp/YoloSharp.csproj -p:Version=${{ env.VERSION }}
+          dotnet pack -c GpuWindowsRelease -o . Source/YoloSharp/YoloSharp.csproj -p:Version=${{ env.VERSION }}
 
       - name: Publish
         run: dotnet nuget push *.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
