--- a/Source/YoloSharp/YoloSharp.csproj
+++ b/Source/YoloSharp/YoloSharp.csproj
@@ -47,14 +47,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Clipper2" Version="1.5.4" />
-		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
-		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.6" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
-		<PackageReference Condition="'$(Configuration)' == 'Release' OR '$(Configuration)' == 'Debug'" Include="Microsoft.ML.OnnxRuntime" Version="1.22.0" />
-		<PackageReference Condition="'$(Configuration)' == 'GpuRelease'" Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.22.0" />
-		<PackageReference Condition="'$(Configuration)' == 'GpuLinuxRelease'" Include="Microsoft.ML.OnnxRuntime.Gpu.Linux" Version="1.22.0" />
-		<PackageReference Condition="'$(Configuration)' == 'GpuWindowsRelease'" Include="Microsoft.ML.OnnxRuntime.Gpu.Windows" Version="1.22.0" />
+		<PackageReference Include="Clipper2" />
+		<PackageReference Include="SixLabors.ImageSharp" />
+		<PackageReference Include="SixLabors.ImageSharp.Drawing" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+		<PackageReference Condition="'$(Configuration)' == 'Release' OR '$(Configuration)' == 'Debug'" Include="Microsoft.ML.OnnxRuntime" />
+		<PackageReference Condition="'$(Configuration)' == 'GpuRelease'" Include="Microsoft.ML.OnnxRuntime.Gpu" />
+		<PackageReference Condition="'$(Configuration)' == 'GpuLinuxRelease'" Include="Microsoft.ML.OnnxRuntime.Gpu.Linux" />
+		<PackageReference Condition="'$(Configuration)' == 'GpuWindowsRelease'" Include="Microsoft.ML.OnnxRuntime.Gpu.Windows" />
 	</ItemGroup>
 
 </Project>
