--- a/Source/Directory.Packages.props
+++ b/Source/Directory.Packages.props
@@ -9,10 +9,10 @@
         <PackageVersion Include="SixLabors.ImageSharp" Version="3.1.10" />
         <PackageVersion Include="SixLabors.ImageSharp.Drawing" Version="2.1.6" />
         <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
+		<PackageVersion Include="YoloSharp.Core" Version="$(Version)" />
         <PackageVersion Include="$(OnnxRuntimePackage)" Version="$(OnnxRuntimeVersion)" />
+		<PackageVersion Include="$(OnnxRuntimePackage).Managed" Version="$(OnnxRuntimeVersion)" />
         <PackageVersion Include="$(OnnxRuntimePackage).Gpu" Version="$(OnnxRuntimeVersion)" />
-        <PackageVersion Include="$(OnnxRuntimePackage).Gpu.Linux" Version="$(OnnxRuntimeVersion)" />
-        <PackageVersion Include="$(OnnxRuntimePackage).Gpu.Windows" Version="$(OnnxRuntimeVersion)" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
         <PackageVersion Include="xunit" Version="2.9.3" />
         <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.1">
